--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,21 @@
 apply plugin: 'java'
-sourceCompatibility = 1.8
+apply plugin: 'idea'
 
-dependencies {
-    compile 'com.sendgrid:sendgrid-java:4.1.1'
-}
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+}
+
+dependencies {
+    compile 'com.sendgrid:sendgrid-java:4.1.1'
+    compile 'mysql:mysql-connector-java:5.1.2'
+}
+
+sourceSets {
+    main {
+        java {
+            'src/main/java'
+        }
+    }
 }
