--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ repositories {
 dependencies {
     compile 'com.sendgrid:sendgrid-java:4.1.1'
     compile 'mysql:mysql-connector-java:5.1.2'
+    compile 'org.slf4j:slf4j-simple:1.7.21'
     compile 'com.sparkjava:spark-core:2.7.0'
-    testCompile group: 'org.slf4j', name: 'slf4j-nop', version: '1.8.0-beta0'
 }
 
 sourceSets {
