added API and user classes

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     compile 'mysql:mysql-connector-java:5.1.2'
     compile 'org.slf4j:slf4j-simple:1.7.21'
     compile 'com.sparkjava:spark-core:2.7.0'
+    compile 'com.google.code.gson:gson:2.8+'
 }
 
 sourceSets {
