--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 install: ./gradlew assemble
 script: ./gradlew check
-jdk:     - oraclejdk8
+jdk: oraclejdk8
 
 before_cache:
  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
